--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">AplicativoAula</string>
+    <!-- Array de itens para o Spinner -->
+    <string-array name="opcoes_spinner">
+        <item>Opção 1</item>
+        <item>Opção 2</item>
+        <item>Opção 3</item>
+        <item>Opção 4</item>
+    </string-array>
 </resources>
